Bug 460714 - Global Edit Mode toolbar is hidden behind Panel Edit Mode toolbar when Panel is on top screen edge
Summary: Global Edit Mode toolbar is hidden behind Panel Edit Mode toolbar when Panel ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Edit Mode (other bugs)
Version First Reported In: master
Platform: Neon Linux
: HI normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
: 478043 479325 480654 480655 481742 482567 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-10-19 13:46 UTC by Patrick Silva
Modified: 2024-04-10 23:25 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-10-19 13:46:26 UTC
STEPS TO REPRODUCE
1. right-click on Plasma panel and choose 'Enter edit mode'
2. move Plasma panel from bottom to top
3. 

OBSERVED RESULT
we cannot leave the edit mode completely with just one click because the edit mode toolbar is hidden behind Plasma panel. To leave the edit mode completely, firstly we need to close the panel settings and then close the edit mode toolbar.

EXPECTED RESULT
edit mode toolbar should be visible after the provided steps, so we can leave the edit mode completely by closing it

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.26.80
KDE Frameworks Version: 5.100.0
Qt Version: 5.15.6
Graphics Platform: Wayland
Comment 1 Patrick Silva 2022-10-19 13:48:17 UTC
Sorry, I meant:
OBSERVED RESULT
we cannot leave the edit mode completely with just one click because the edit mode toolbar is hidden behind Plasma panel settings.
Comment 2 Fushan Wen 2022-10-21 15:05:42 UTC
Don't have a very good idea to fix it without making panel and desktop code much more complex :(
Comment 3 Nate Graham 2023-11-17 20:43:32 UTC
Partially fixed in Plasma 6; now only _some_ of the toolbar is hidden by the new panel configuration dialog.
Comment 4 Patrick Silva 2023-12-04 13:34:34 UTC
*** Bug 478043 has been marked as a duplicate of this bug. ***
Comment 5 Marco Martin 2023-12-07 15:37:04 UTC
on p6 the close button sticks out... we could go yolo and just add some fixed extra margins on the panel settings window.

(note that is still possible to block it completely because with custom it will still show the ruler)
Comment 6 Ridge 2023-12-23 22:11:40 UTC
In Plasma 5.91.0, setting the top panel to "Auto hide" completely hides the edit mode toolbar under the panel as well.
Comment 7 Bug Janitor Service 2024-01-21 13:40:06 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3802
Comment 8 Nate Graham 2024-01-30 22:27:25 UTC
*** Bug 479325 has been marked as a duplicate of this bug. ***
Comment 9 Nate Graham 2024-02-01 19:56:56 UTC
*** Bug 480655 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2024-02-01 20:02:11 UTC
*** Bug 480654 has been marked as a duplicate of this bug. ***
Comment 11 Nate Graham 2024-02-26 20:52:42 UTC
*** Bug 481742 has been marked as a duplicate of this bug. ***
Comment 12 Bug Janitor Service 2024-03-01 11:57:25 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3986
Comment 13 Nate Graham 2024-03-05 16:54:46 UTC
Git commit f34c2e3c69d33cc873dd7fef56b1b6c25c0c0eae by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 05/03/2024 at 16:54.
Pushed by ngraham into branch 'master'.

Do not include the panel configuration window in the available screen region

Depends on https://invent.kde.org/plasma/libplasma/-/merge_requests/1069

This way a top panel does not overlap with the global Edit Mode toolbar
anymore. Instead, the toolbar will move to the bottom of the screen, where
there's space for it.
FIXED-IN: 6.1

M  +17   -0    shell/panelview.cpp
M  +3    -0    shell/panelview.h
M  +4    -1    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/f34c2e3c69d33cc873dd7fef56b1b6c25c0c0eae
Comment 14 Nate Graham 2024-03-07 16:51:47 UTC
*** Bug 482567 has been marked as a duplicate of this bug. ***