Make panel reserve area for its settings to avoid collision with toolbox

BUG:460714